# kafka-python-test

./: Makefile  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
.github/: GITHUB_ACTIONS_SETUP.md  README.md  SECRETS.md
.github/scripts/: setup-aws-oidc.sh
.github/workflows/: deploy-lambda.yml
lambda/: .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  app.py  build_layer.sh  cdk.json  package-lock.json  package.json  requirements.txt
lambda/cdk_app/: __init__.py  kafka_consumer_stack.py
lambda/lambda_function/: handler.py  requirements.txt
