[project]
name = "kafka-python-test"
requires-python = ">=3.11,<4.0"
version = "1.0.0"
description = "Kafka test project"
classifiers=[
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
license = "MIT-0"
package-mode = false

[tool.poetry.group.dev.dependencies]
python = "^3.11.0"

[tool.poetry.dependencies]
confluent-kafka = "^2.12.0"
faker = "^37.11.0"
